代码规范优化